# evocode-tauri

./: README.md  package.json
.github/workflows/: release.yml
src/: App.vue  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: connectivity.rs  lib.rs
src/api/: bridge.ts
src/components/: BridgeStatus.vue  ContextGrid.vue  LogPanel.vue
src/composables/: useLocale.ts
src/layouts/: DefaultLayout.vue
src/locales/: en.ts  zh.ts
src/router/: index.ts
src/views/: AboutView.vue  ConfigView.vue  HomeView.vue  LogView.vue  SessionDetailView.vue
src/views/config_view/: ConnectionPanel.vue
