[package]
name = "evocode-tauri"
version = "0.1.13"
edition = "2024"

[lib]
name = "evocode_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "evocode-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
evocode-proto = { git = "https://github.com/evolutions-code/evocode", branch = "main", package = "evocode-proto" }
evocode-config = { git = "https://github.com/evolutions-code/evocode", branch = "main", package = "evocode-config" }
dirs = "6"
toml = "0.9"
reqwest = {version = "0.13", features = ["json"] }
